added checksum
