# docs/swagger.yaml
@@ -54,8 +54,10 @@ definitions:
         type: string
     type: object
   response.VersionInfo:
-    description: holds information about the latest version of the app.
     properties:
+      checksum:
+        description: Checksum is the SHA-256 checksum of the latest application version.
+        type: string
       url:
         description: Url is the URL where the latest version can be downloaded from.
         type: string
@@ -63,7 +65,7 @@ definitions:
         description: VersionCode represents the version build of the application.
         type: integer
       versionName:
-        description: Name is the version of the latest application version.
+        description: VersionName is the version of the latest application version.
         type: string
     type: object
 info:
@@ -89,8 +91,8 @@ paths:
       responses:
         "200":
           description: Success Response - returns the type of update required ('hard',
-            'soft', or 'none') and the latest version information, if an update is
-            available.
+            'soft', or 'none') and the latest version information, including the checksum,
+            if an update is available.
           schema:
             $ref: '#/definitions/response.CheckResponse'
         "400":
